/*
 *
 * @author snow
 * @since 2021/03/16
 */
syntax = "proto3";

service HelloService {
  rpc SayHello (MessageRequest) returns (MessageResposne);
  rpc LotsOfResponse (MessageRequest) returns (stream MessageResposne);
  rpc LotsOfRequest (stream MessageRequest) returns (MessageResposne);
  rpc BidHello (stream MessageRequest) returns (stream MessageResposne);

}

message MessageRequest {
  string ping = 1;
  int64 id = 2;
}

message MessageResposne {
  string pong = 1;
  int64 id = 2;
}